<resources>
    <string name="app_name">ComponentTestTool</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Service Fragment</string>
    <string name="second_fragment_label">Content Provider Fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>

    <string name="foreground_service">Foreground Service</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="notification_title">Timer</string>
    <string name="notification_message">foreground service running</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service">Service</string>
    <string name="content_provider">Content Provider</string>
    <string name="insert">insert</string>
    <string name="read">Read</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="listen_timezone_change">listen timezone change</string>
    <string name="background_service">Background Service</string>
    <string name="start_background_task">Start Background task</string>
    <string name="new_thread">new Thread</string>
</resources>