<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EntryFragment">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/foreground_service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service"
        app:layout_constraintBottom_toTopOf="@+id/background_service_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/background_service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_service"
        app:layout_constraintBottom_toTopOf="@+id/content_provider_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foreground_service_button" />

    <Button
        android:id="@+id/broadcast_receiver_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_receiver"
        app:layout_constraintBottom_toTopOf="@+id/new_thread_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_provider_button" />

    <Button
        android:id="@+id/content_provider_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_provider"
        app:layout_constraintBottom_toTopOf="@+id/broadcast_receiver_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_service_button" />

    <Button
        android:id="@+id/new_thread_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_thread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/broadcast_receiver_button" />

</androidx.constraintlayout.widget.ConstraintLayout>